# modash

./: .gitignore  CHANGELOG.md  README.md  modash.py  modashc.py  pyproject.toml
docs/: README.md  case-source-semantics.md  compound-source-condition-lowering.md  dynamic-source-resolution.md  missing-source-runtime-lowering.md  real-world-test-suite.md  retained-helper-dispatch.md  roadmap-0.6.md  runtime-graph-compiler.md  runtime-guarded-source-lowering.md  runtime-source-discovery-foundation.md  runtime-source-discovery.md  runtime-supplement-generation.md  source-argument-frame-restoration.md  source-argument-semantics.md  source-child-shell-contexts.md  source-control-flow-boundaries.md  source-pattern-semantics.md  source-supplements.md  supported-source-resolution.md
methods/: __init__.py  compile.py  compile_context.py  compile_positionals.py  compile_renderer.py  runtime_observation_reports.py  runtime_source_commands.py  runtime_source_graph.py  runtime_source_observations.py  runtime_source_supplements.py  runtime_source_trace.py  shell_assignments.py  shell_commands.py  shell_scan.py  shell_text.py  source_commands.py  source_conditions.py  source_effects.py  source_errors.py  source_evaluator.py  source_evaluator_commands.py  source_evaluator_conditions.py  source_evaluator_functions.py  source_evaluator_loops.py  source_evaluator_shared.py  source_evaluator_sources.py  source_evaluator_support.py  source_frontend.py  source_frontend_loops.py  source_frontend_shared.py  source_globs.py  source_resolver.py  source_supplements.py  source_traits.py  sources.py  (+2 more)
(+121 files in other folders)
