[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modash"
version = "0.6.0"
description = "Merge Bash script projects into a single output file"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["bash", "shell", "source", "compiler", "dependency-resolution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Shells",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/nmehran/modash"
Source = "https://github.com/nmehran/modash"
Issues = "https://github.com/nmehran/modash/issues"
Changelog = "https://github.com/nmehran/modash/blob/master/CHANGELOG.md"

[project.scripts]
modash = "modash:cli_main"

[tool.setuptools]
py-modules = ["modash"]

[tool.setuptools.packages.find]
include = ["methods*"]
